--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.1.0+1
+version: 1.2.0+1
 
 environment:
   sdk: ^3.9.2
@@ -45,6 +45,7 @@ dependencies:
   app_tracking_transparency: ^2.0.6+1
   advertising_id: ^2.7.1
   app_settings: ^6.1.1
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
